--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       height: auto;
       display: block;
       margin-bottom: 20px;
+      border-radius: 10%
     }
     h1, h2 {
       text-align: center;
@@ -53,7 +54,7 @@
     <h1>Wedding Day</h1>
     <h2>Айжан & Нұржан</h2>
 
-    <img class="hero" src="https://picsum.photos/400/300?random=1" alt="Пара">
+    <img class="hero" src="https://media.istockphoto.com/id/1397574789/ru/%D1%84%D0%BE%D1%82%D0%BE/%D0%B2%D0%BC%D0%B5%D1%81%D1%82%D0%B5-%D0%BC%D1%8B-%D0%B4%D0%B5%D0%BB%D0%B0%D0%B5%D0%BC-%D0%BC%D0%B8%D1%80-%D0%BB%D1%83%D1%87%D1%88%D0%B5.jpg?s=612x612&w=0&k=20&c=ed2aLF2YrzFAB_QcOQnlikKy-wdhcplHHZO9iJyI_Rg=1" alt="Пара">
 
     <div class="section">
       <h2>День свадьбы: 12 шілде 2025</h2>
